--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ."
+    "start": "node --es-module-specifier-resolution=node ."
   },
   "author": "Tuanm",
   "license": "ISC",
