--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "author": "Tuanm",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^4.4.0"
+  }
 }
